<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/callMenu"
        android:icon="@android:drawable/ic_menu_call"
        app:showAsAction="always"
        android:title="@string/common_call"
        />

<!--
    <item
        android:id="@+id/attachMenu"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        android:title="@string/menu_attach"
        />
-->

    <item
        android:id="@+id/sendImage"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always"
        android:title="@string/menu_send_image"
        />

    <item
        android:id="@+id/sendDoc"
        android:icon="@drawable/ic_notes"
        app:showAsAction="ifRoom"
        android:title="@string/menu_send_document"
        />

    <item
        android:id="@+id/sendAudio"
        android:icon="@android:drawable/presence_audio_online"
        app:showAsAction="ifRoom"
        android:title="@string/menu_send_audio"
        />

    <item
        android:id="@+id/sendVideo"
        android:icon="@android:drawable/presence_audio_online"
        app:showAsAction="ifRoom"
        android:title="@string/menu_send_video"
        />

    <item
        android:id="@+id/sendContact"
        android:icon="@drawable/ic_username"
        app:showAsAction="ifRoom"
        android:title="@string/menu_send_contact"
        />

    <item
        android:id="@+id/sendLocation"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="ifRoom"
        android:title="@string/menu_send_location"
        />

    <item
        android:id="@+id/blockThisContact"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="ifRoom"
        android:title="@string/block"
        />

</menu>