<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_locale_change"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cloudkibo.ui.LocaleChange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

    <TextView
        android:text="@string/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />

        <Button
            android:text="@string/lang_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEnglish"
            android:onClick="onClick" />

        <Button
            android:text="@string/lang_urdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonUrdu"
            android:onClick="onClick" />

        <Button
            android:text="@string/lang_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonArabic"
            android:onClick="onClick" />

        <Button
            android:text="@string/lang_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFrench"
            android:onClick="onClick" />

        <Button
            android:text="@string/lang_spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSpanish"
            android:onClick="onClick" />

        <Button
            android:text="@string/lang_german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGerman"
            android:onClick="onClick" />

        <Button
            android:text="@string/common_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDefault"
            android:onClick="onClick" />


    </LinearLayout>
</RelativeLayout>
