<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
        android:id="@+id/archived"
        android:icon="@drawable/ic_notes"
        app:showAsAction="always"
        android:title="@string/archived_menu_item"
        />

	<item android:id="@+id/search_chats"
		android:title="@string/menu_search_chats"
		android:icon="@drawable/ic_search"
		android:orderInCategory="100"
		app:showAsAction="always"
		android:visible="false"/>

	<item android:id="@+id/connect_to_desktop"
		android:title="@string/menu_connect_to_desktop"
		android:icon="@drawable/ic_search"
		android:orderInCategory="100"
		app:showAsAction="always" />



	<item
		android:id="@+id/settings"
		android:icon="@drawable/ic_notes"
		app:showAsAction="ifRoom"
		android:title="@string/common_settings"
		/>
	<item
		android:id="@+id/broadcast"
		android:icon="@drawable/ic_notes"
		app:showAsAction="ifRoom"
		android:title="Create Broadcast"
		/>

	<!--<item
		android:id="@+id/backup_setting"
		android:icon="@drawable/ic_notes"
		app:showAsAction="always"
		android:title="@string/backup_settings"
		/>

	<item
		android:id="@+id/language"
		android:icon="@drawable/ic_notes"
		app:showAsAction="ifRoom"
		android:title="@string/language"
		/>
		-->
</menu>
