<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F3EE">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/display_ic"
            android:layout_height="250dp"
            android:src="@drawable/avatar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_settings"
            android:textColor="#000000"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:backgroundTint="#ffffff"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:background="@drawable/border">



                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group_utility_group_mute"
                    android:id="@+id/switch1"
                    android:checked="false"
                    />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/add_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="5dp"
                android:weightSum="1"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_utility_member_add"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    />



            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_utility_group_participants"
            android:textColor="#000000"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>

